<resources>
    <string name="app_name">HungerHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">user@gmail.com</string>
    <string name="nav_header_subtitle2">012–3456789</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_survey">Survey</string>
    <string name="menu_donation">Donation</string>
    <string name="menu_request">Request Food</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="request_form">Request Food Form</string>
    <string name="white_bg">White Background</string>
    <string name="request_donation_form">Request Donation Form</string>
    <string name="marital_status">Marital Status</string>
    <string-array name="marital_choice">
        <item>Select a choice</item>
        <item>Single</item>
        <item>Together</item>
        <item>Married</item>
        <item>Widowed</item>
        <item>Divorced</item>
    </string-array>
    <string name="job_status">Job Status</string>
    <string-array name="job_choice">
        <item>Select a choice</item>
        <item>Employed</item>
        <item>Unemployed</item>
        <item>Student</item>
    </string-array>
    <string name="income">Household Income</string>
    <string name="reason_food">Why do you have insufficient food?</string>
    <string name="pax">Pax</string>
    <string name="agree_tnc">I have read and agree the</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="tnc_underlined"><u>Terms and Conditions</u></string>
    <string name="close">Close</string>
    <string name="agree">Agree</string>
    <string name="submit">Submit</string>
    <string name="marital_required">Please choose a marital status</string>
    <string name="job_required">Please choose a job status</string>
    <string name="value_required">Value Required</string>
    <string name="invalid_pax">Maximum Pax is 10</string>
    <string name="tnc_required">Please read and accept the Terms and Conditions.</string>
    <string name="tnc_content">
        Privacy Policy\n==============\n\nLast updated: December 26, 2022\n\n
        Personal Data\n~~~~~~~~~~~~~\n\n By agreeing these Terms and Conditions, We may submit Your certain personally identifiable information provided that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:\n\n
          * Email address\n  * First name and last name\n  * IC number\n  * Phone number\n   * Address\n\n
        Use of Your Personal Data\n-------------------------\nThe Company may use Personal Data for the following purposes:\n\n  * For the performance of a contract: the development, compliance and undertaking of the purchase contract for the products, items or request You have of any other contract with Us through the Service.
        \n\n  * To contact You: To contact You by email, telephone calls, SMS, or other equivalent forms of electronic communication, such as a mobile application\'s push notifications regarding updates or informative communications related to the functionalities, products or contracted services, including the security updates,
        when necessary or reasonable for their implementation.\n\n  * To manage Your requests: To attend and manage Your requests to Us.\n\nSecurity of Your Personal Data\n---------------------------\n\nThe security of Your Personal Data is important to Us, but remember that no method of transmission over the Internet, or method
        of electronic storage is 100% secure. While We strive to use commercially acceptable means to protect Your Personal Data, We cannot guarantee its absolute security.\n\n
    </string>
    <string name="dialog_title">Submit Form</string>
    <string name="dialog_message">Are you sure you want to submit this form?</string>
    <string name="cancel">Cancel</string>
    <string name="form_submitted">Form submitted</string>
    <string name="action_cancelled">Action cancelled</string>
    <string name="firebase_req">Requests</string>
    <string name="firebase_user">User</string>
    <string name="request_status">Request Status</string>
    <string name="reason">Reason</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="add_request">Add Request</string>
    <string name="pending">Pending</string>
    <string name="no_record">No record found!</string>
    <string name="filter">Filter</string>
    <string name="filter_by">Filter By</string>
    <string name="remove_filter">Remove Filter</string>
    <string name="remove_filter_msg">Filter Removed</string>
    <string name="show_record">Showing records in</string>
    <string name="Survey_text">Survey</string>
    <string name="Height">Height (cm)</string>
    <string name="Weight">Weight (kg)</string>
    <string name="BMI_calc">BMI calculator</string>
    <string name="calc">Calculate</string>
    <string name="reset">Reset</string>
    <string name="underweight">Underweight</string>
    <string name="Healthy">Healthy</string>
    <string name="Overweight">Overweight</string>
    <string name="Status">Status: </string>
    <string name="result">Your BMI is </string>
    <string name="fragment_name">com.example.MyFragment</string>
    <string name="next">Next</string>
    <string name="LackIntake">Lack of food intake</string>
    <string name="selectDescription">Kindly select which section of food you are lacked of: </string>
    <string name="wheat">Bread, Rice, Noodles, Cereal products</string>
    <string name="Fruits_vege">Fruits and Vegetables</string>
    <string name="Meat">Fish, Meat, Egg, Milk products</string>
    <string name="fats">Fats, Oil, Sugar, Salt</string>
    <string name="foodPyramidInfo"></string>
    <string name="general_survey">Survey</string>
    <string name="How_many_people">How many members are there in your household?</string>
    <string name="How_many_working">How many members are working currently in your household?</string>
    <string name="How_many_meals">How many meals do you and your family consume daily?</string>
    <string name="family_can_cover">Is your family income able to cover daily food expenses?</string>
    <string name="one_to_three">1 – 3</string>
    <string name="four_to_six">4 – 6</string>
    <string name="seven_to_nine">7 – 9</string>
    <string name="ten_or_above">10 or above</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four_above">4 or above</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="rateHygiene">Rate 1-5 of how satisfied are you with the hygiene of your living environment</string>
    <string name="reasonable_price">Do you think the food price in your area is reasonable/affordable?</string>
    <string name="required_select">You are required to select a value before proceed</string>
    <string name="started_title">Hello You!</string>
    <string name="LogIn">Log In</string>
    <string name="emailRequired">Email Required!</string>
    <string name="passwordRequired">Password Required!</string>
    <string name="fullNameRequired">Fullname Required!</string>
    <string name="icRequired">IC Required!</string>
    <string name="addressRequired">Address Required!</string>
    <string name="stateRequired">State Required!</string>
    <string name="poscodeRequired">PosCode Required!</string>
    <string name="started_sub_title">\nNice to meet you, come join our application!
        \n<b>Login</b> If you already have an account.
        \n<b>Register</b> To get started with the application.
    </string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
        <font color="00C988"><b>Login</b></font>
        if you already have an account.
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_account">
        I don\'t have an account
        <font color="#00C988"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="00C988"><b>Register</b></font>
        to get started with the app.
    </string>
    <string name="register_fullname">Your fullname</string>
    <string name="register_email">Your email</string>
    <string name="register_comfirm_password">Comfirm Password</string>
    <string name="register_have_account">I already have an account\n<font color="#00C988"><b>Login</b></font></string>
    <string name="home_title">Hello World</string>
    <string name="home_sub_title">Welcome to home</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="illustration_img">illustration_image</string>
    <string name="illustration_image">illustration_img</string>
    <string name="started_text">Welcome </string>
    <string name="register_username">Your username</string>
    <string name="register_state">Your State</string>
    <string name="register_IC">Your IC</string>
    <string name="register_posCode">Pos Code</string>
    <string name="registerRoD">Recipient/Donor</string>
    <string name="register_recipient">Recipient</string>
    <string name="register_donor">Donor</string>
    <string name="food_donation">Food Donation</string>
    <string name="donation_amount">Enter donation amount: </string>
    <string name="donation_details">Donation Details</string>
    <string name="donation_payment">Donation Payment</string>
    <string name="enter_price_manual">Enter Donation amount: </string>
    <string name="visa">Visa</string>
    <string name="mastercard">MasterCard</string>
    <string name="bank_card_num">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_expiry_date">Card Expiry Date</string>
    <string name="card_CVC">CVC/CVV/CID</string>
    <string name="donate">Donate</string>
    <string name="date_picker">Choose Date</string>
    <string name="length_error">Length error</string>
    <string name="invalid_format">Invalid Format</string>
    <string name="input_empty">Cannot be empty</string>
    <string name="card_number_hints">XXXX XXXX XXXX XXXX</string>
    <string name="card_CVC_hints">XXX</string>
    <string name="donation_description">Spread the love, Share the happiness</string>
    <string name="donation_text">Start donate money to help us in achieving "zero hunger". In 2020, between 720 million and 811 million persons worldwide were suffering from hunger, roughly 161 million more than in 2019.</string>
    <string name="main_menu_quotes">“Giving does not only precede receiving; it is the reason for it. It is in giving that we receive."</string>
    <string name="main_menu_quotes_author">Israelmore Ayivor</string>
    <string name="request_main_menu">REQUEST</string>
    <string name="donate_main_menu">DONATE</string>
    <string name="survey_main_menu">START A SURVEY</string>
    <string name="info_main_menu">MORE INFO</string>
    <string name="donor_details">Donor Details</string>
    <string name="donor_ic">IC</string>
    <string name="donation_amount_details">Donation Amount</string>
</resources>