<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_survey"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_survey" />
        <item
            android:id="@+id/nav_donation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_donation" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/menu_request" />
    </group>
</menu>