<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.survey.SurveyFragmentGeneral3">

    <TextView
        android:id="@+id/textViewGeneral3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/general_survey"
        android:textColor="@color/brown_dark"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupMeals"
        android:layout_width="201dp"
        android:layout_height="196dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMeals">

        <RadioButton
            android:id="@+id/radioButtonMealOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonMealTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonMealThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonMealFour_above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_above"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewMeals"
        android:layout_width="317dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/How_many_meals"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGeneral3" />

    <Button
        android:id="@+id/buttonNavGen4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>