<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.RegisterFragment">

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/register_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterFullname"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/register_fullname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <EditText
        android:id="@+id/editTextRegisterIC"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/register_IC"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterFullname" />

    <EditText
        android:id="@+id/editTextRegisterPhoneNo"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="PhoneNumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterIC" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPhoneNo" />

    <EditText
        android:id="@+id/editTextRegisterAddress"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail" />

    <EditText
        android:id="@+id/editTextRegisterState"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/register_state"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterAddress" />

    <EditText
        android:id="@+id/editTextRegisterPostCode"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/register_posCode"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterState" />


    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPostCode" />

    <EditText
        android:id="@+id/editTextRegisterComfirmPassword"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/register_comfirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="0dp"
        android:background="@color/primary_color"
        android:text="@string/btn_register"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterComfirmPassword" />

    <RadioButton
        android:id="@+id/Recipient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/register_recipient"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterComfirmPassword" />

    <RadioButton
        android:id="@+id/Donor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/register_donor"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Recipient"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterComfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
