<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.survey.SurveyFragmentGeneral2">


    <TextView
        android:id="@+id/textViewGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/general_survey"
        android:textColor="@color/brown_dark"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPeopleWorking"
        android:layout_width="307dp"
        android:layout_height="89dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/How_many_working"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGeneral" />

    <RadioGroup
        android:id="@+id/radioGroupWorking"
        android:layout_width="219dp"
        android:layout_height="208dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPeopleWorking">

        <RadioButton
            android:id="@+id/radioButtonWork1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_to_three"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonWorking4_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_to_six"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonWorking7_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seven_to_nine"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonWorking10_above"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:minHeight="48dp"
            android:text="@string/ten_or_above"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonNavGen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>