<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.survey.SurveyFragmentGeneral">


    <TextView
        android:id="@+id/textViewGeneralSurvey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/general_survey"
        android:textColor="@color/brown_dark"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupMembersInHouse"
        android:layout_width="242dp"
        android:layout_height="201dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPeople">

        <RadioButton
            android:id="@+id/radioButton1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_to_three"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton4_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_to_six"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton7_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seven_to_nine"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton10_above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_or_above"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/How_many_people"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGeneralSurvey" />

    <Button
        android:id="@+id/buttonNavGen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewValid1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMembersInHouse" />

</androidx.constraintlayout.widget.ConstraintLayout>